add .versecontent as paragraph, adjust placement of other Bible-related styles

--- a/src/includes/shared/_normalize.scss
+++ b/src/includes/shared/_normalize.scss
@@ -32,13 +32,10 @@ body {
   margin: 0 $spacing-large;
 }
 
+@import "norm_para";
+
 p {
-  line-height: $def-line;
-  font-size: $def-font;
-  margin: 0;
-  text-align: left;
-  text-indent: 0;
-  padding-top: ($spacing-small + $spacing-extra-small);
+  @include paragraph;
 }
 
 li {
