--- a/src/includes/shared/_normalize.scss
+++ b/src/includes/shared/_normalize.scss
@@ -53,6 +53,12 @@ li {
   }
 }
 
+/* fix for app.wordsearchbible.com native style displaying links as block when in `li`s or `dt`s */
+li a,
+dt a {
+  display: inline;
+}
+
 /**
  * Add the correct display in IE 9-.
  */
