--- a/src/mywsb-para.scss
+++ b/src/mywsb-para.scss
@@ -90,6 +90,7 @@ $lang-font:  "gentium plus", serif;
   #NORMALIZATION
 \*------------------------------------*/
 
+@import "includes/mywsb/body";
 @import "includes/shared/normalize";
 @import "includes/tachyons/box-sizing";
 
