--- a/src/wordsearch.scss
+++ b/src/wordsearch.scss
@@ -69,6 +69,7 @@ $lang-font:  "Gentium Plus", "Gentium", "Charis SIL", serif;
   #NORMALIZATION
 \*------------------------------------*/
 
+@import "includes/shared/body";
 @import "includes/shared/normalize";
 @import "includes/tachyons/box-sizing";
 
