--- a/mywsb-dev.css
+++ b/mywsb-dev.css
@@ -177,7 +177,12 @@ img {
 /*------------------------------------*\
   #NORMALIZATION
 \*------------------------------------*/
-/*! Heavily-modified version of normalize.css v7.0.0
+body {
+  font: normal normal 100% georgia, times, serif;
+  margin: 0 2rem;
+}
+
+/* Heavily-modified version of normalize.css v7.0.0
  * | MIT License | github.com/necolas/normalize.css
  */
 /* Document
@@ -198,11 +203,6 @@ html {
 
 /* Sections
    ========================================================================== */
-body {
-  font: normal normal 100% georgia, times, serif;
-  margin: 0 2rem;
-}
-
 p {
   line-height: 1.5;
   font-size: 1em;
