--- a/src/mywsb-dist.scss
+++ b/src/mywsb-dist.scss
@@ -91,6 +91,7 @@ $lang-font:  "gentium plus", serif;
   #NORMALIZATION
 \*------------------------------------*/
 
+@import "includes/mywsb/body";
 @import "includes/shared/normalize";
 @import "includes/tachyons/box-sizing";
 
